test bug about collage gap 4

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -570,7 +570,6 @@
     .aboutCollage
         display: flex
         flex-wrap: wrap
-        margin: 12px 0
 
         .B1, .B5, .B6
             display: none
@@ -578,12 +577,15 @@
         .B4
             order: 3
             height: 100%
+            margin: 2px 0
         .B2
             order: 2
             height: 100%
+            margin: 2px 0
         .B3
             order: 1
             height: 100%
+            margin: 2px 0
 
 
 
